# LLM-Simulation

./: .gitignore  README.md
drone_nl_control/: README.md  package.xml  pyproject.toml  setup.cfg  setup.py
drone_nl_control/config/: agent_config.yaml  benchmark_config.yaml
drone_nl_control/drone_nl_control/: bench_llm.py  llm_agent.py  report.py  vlm_agent.py
drone_nl_control/drone_nl_control.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
drone_nl_control/launch/: nl_drone.launch.py
drone_nl_control/results/: mission_results_20260225_182014.yaml  mission_summary_20260225_183714.csv  vlm_results_20260225_115519.yaml  vlm_summary_20260225_183714.csv
drone_nl_control/scripts/: install_ollama.sh  run_benchmark.sh
vtol_description/: CMakeLists.txt  TRL_Drone_B_and_Y_readme.md  custom_VTOL_URDF_setup.md  derick_VTOL_readme.md  package.xml
vtol_description/launch/: avoidance.launch.py  display.launch.py  gazebo.launch.py  mission.launch.py  vtol.rviz
vtol_description/meshes/: aileron.stl  motor_1_body.stl  prop_2.stl  prop_3.stl  wing_right.stl
vtol_description/models/bush/: model.config  model.sdf
vtol_description/models/house1/: model.config  model.sdf
vtol_description/models/house2/: model.config  model.sdf
vtol_description/models/house3/: model.config  model.sdf
vtol_description/models/vtol/: model.config  model.sdf
vtol_description/models/vtol/meshes/: fuselage.stl  motor_2_body.stl  motor_3_body.stl  (+9 more)
vtol_description/scripts/: fly_tour.py  mavlink_controller.py  mavlink_test.py  mission.py  obstacle_avoidance.py  radio_controller.py  run_mission.py  vtol_env.sh  vtol_physics.py
vtol_description/urdf/: vtol.urdf
vtol_description/worlds/: vtol_empty.sdf  vtol_standalone.sdf
(+54 files in other folders)
